fixed spacing in between cards in MyVideos section and fixed mobile layout

--- a/src/components/myVideos/myVideos.scss
+++ b/src/components/myVideos/myVideos.scss
@@ -7,25 +7,6 @@
   justify-content: center;
   position: relative;
 
-  .arrow {
-    height: 50px;
-    position: absolute;
-    cursor: pointer;
-
-    @include mobile {
-      display: none;
-    }
-
-    &.left {
-      left: 100px;
-      transform: rotateY(180deg);
-    }
-
-    &.right {
-      right: 100px;
-    }
-  }
-
   .slider {
     height: 700px;
     display: flex;
@@ -40,6 +21,7 @@
       height: 100vh;
       flex-direction: column;
       justify-content: center;
+      margin-top: -40px;
     }
 
     h1 {
@@ -57,6 +39,13 @@
       justify-content: center;
       margin-top: 20px;
 
+      @include mobile {
+        // width: 80%;
+        height: 150px;
+        margin-top: 20px;
+        
+      }
+
       .item {
         width: 700px;
         height: 100%;
@@ -68,8 +57,10 @@
 
         @include mobile {
           width: 80%;
-          height: 150px;
-          margin: 15px 0;
+          height: 130px;
+          margin: 0;
+          flex-direction: column;
+          padding-top: 10px;
         }
 
         .left {
@@ -78,6 +69,14 @@
           display: flex;
           align-items: center;
           justify-content: center;
+          margin-left: 20px;
+
+          @include mobile {
+            align-items: center;
+            justify-content: center;
+            width: 50%;
+            // margin-left: 30px;
+          }
 
           .leftContainer {
             width: 90%;
@@ -89,29 +88,7 @@
             @include mobile {
               justify-content: space-evenly;
             }
-
-            .imgContainer {
-              width: 40px;
-              height: 40px;
-              border-radius: 50%;
-              background-color: rgb(245, 179, 155);
-              display: flex;
-              align-items: center;
-              justify-content: center;
-
-              @include mobile {
-                width: 20px;
-                height: 20px;
-              }
-
-              img {
-                width: 25px;
-
-                @include mobile {
-                  width: 15px;
-                }
-              }
-            }
+            
             h2 {
               font-size: 20px;
 
@@ -128,8 +105,6 @@
             span {
               font-size: 12px;
               font-weight: 400;
-              // text-decoration: underline;
-              // cursor: pointer;
 
               @include mobile {
                 font-size: 10px;
@@ -146,10 +121,40 @@
           overflow: hidden;
           border-radius: 10px;
           margin-left: 20px;
+          cursor: pointer;
 
-          img {
-            width: 400px;
+          @include mobile {
+            width: 50%;
           }
+
+          &:hover {
+            background-color: $cardsBGColor;
+            img {
+              opacity: 0.2;
+              z-index: 0;
+            }
+          }
+
+          a {
+            display: flex;
+            @include mobile {
+              width: 50%;
+            }
+
+            img {
+              width: 400px;
+  
+              @include mobile {
+                width: auto;
+                // height: 150%;
+                margin: 10px 0;
+                
+              }
+            }
+  
+          }
+          
+          
         }
       }
     }
